<resources>
    <string name="app_name">Inmath</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="camera">课堂笔记</string>
    <string name="Gallery">公式收藏</string>
    <string name="Tools">数学工具</string>
    <string name="User">用户中心</string>
    <string name="query">查询</string>
    <string name="guide">求导法则</string>
    <string name="Jifen">基本积分</string>
    <string name="Juzhen">矩阵运算</string>
    <string name="Taile">泰勒公式</string>
    <string name="Kexi">柯西中值</string>
    <string name="Fuli">傅里叶级数</string>
    <string name="Posong">泊松分布</string>
    <string name="Weifen">微分运算</string>
    <string name="Laibu">莱布尼茨</string>
    <string name="Imghint">显示公式</string>
    <string name="Search">查找公式</string>
    <string name="alarm">设置提醒</string>
    <string name="chushihua">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="equal">=</string>
    <string name="plusOrminus">±</string>
    <string name="mod">%</string>
    <string name="daoshu">1/x</string>
    <string name="decimalpoint">.</string>
    <string name="square">x²</string>
    <string name="radicals">√x</string>
    <string name="backspace">←</string>
    <string name="clear">C</string>
    <string name="ce">CE</string>
    <string name="math_news">九九歌就是我们现在使用的乘法口诀。
    远在公元前的春秋战国时代，九九歌就已经被人们广泛使用。在当时的许多著作中，都有关于九九歌的记载。最初的九九歌是从"九九八十一"起到"二二如四"止，共36句。因为是从"九九八十一"开始，所以取名九九歌。大约在公元五至十世纪间，九九歌才扩充到"一一如一"。大约在公元十三、十四世纪，九九歌的顺序才变成和现在所用的一样，从"一一如一"起到"九九八十一"止。</string>
    <string name="copyeright">copyright@JYoung233 </string>
    <string name="time">2015-2016</string>
    <string name="action_settings">Settings</string>
</resources>
