<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:stretchColumns="0,1,2"

        >
        <TableRow>
            <Button

                android:id="@+id/button1"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/guide"
                android:background="#ffaaaa"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/Jifen"
                android:background="#ffd4aa"/>
            <Button
                android:id="@+id/button3"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/Juzhen"
                android:background="#ffffaa"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/TableLayout02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:stretchColumns="0,1,2">
        <TableRow>
            <Button
                android:id="@+id/button4"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/Taile"
                android:background="#d4ffaa"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:background="#aaffaa"
                android:text="@string/Kexi" />

            <Button
                android:id="@+id/button6"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"

                android:text="@string/Fuli"
                android:background="#aaffd4"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/TableLayout03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:stretchColumns="0,1,2">
        <TableRow>
            <Button
                android:id="@+id/button7"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/Posong"

                android:background="#d4aaff"/>

            <Button
                android:id="@+id/button8"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/Weifen"
                android:background="#aad4ff"/>
            <Button
                android:id="@+id/button9"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/Laibu"
                android:background="#aaaaff"/>
        </TableRow>
    </TableLayout>


</LinearLayout>
