<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/camera" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Gallery" />
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Tools" />
    </group>

    <item android:title="@string/User">
        <menu>
            <item
                android:id="@+id/user_info"
                android:icon="@drawable/ic_menu_send"
                android:title="用户登录" />
            <item
                android:id="@+id/user_share"
                android:icon="@drawable/ic_menu_share"
                android:title="打卡分享" />
        </menu>
    </item>

</menu>
